# advent_of_code

./: README.md  pyproject.toml
1/: 1.1.py
1/data/: test_input.txt
11/: 11.1.py
13/: 13.1.py  13.2.py
14/: 14.1.py  14.2.py
15/: 15.2.py
17/: 17.1.py  17.2.py
18/: 18.2.py
2/: 2.1.py
2023/1/: 1.2.py
2023/11/: 11.2.py
2023/12/: 12.1.py  12.2.py
2023/15/: 15.1.py  15.2.py
2023/16/: 16.1.py  16.2.py
2023/18/: 18.1.py  18.2.py
2023/18/data/: test_input2.txt
2023/2/: 2.2.py
2023/3/: 3.2.py
2023/4/: 4.1.py  4.2.py  utils.py
2023/5/: 5.1.py
2023/6/: 6.1.py  6.2.py
2023/7/: 7.1.py
2023/8/: 8.1.py  8.2.py
2023/9/: 9.2.py
2023/day10/: aoc10_2.py
2023/day19/: 19_1.py  19_2.py
2024/day_1/: 1.1.py  1.2.py
3/: 3.1.py  utils.py
4/: 4.2.py
5/: 5.2.py
7/: 7.1.py  7.2.py
8/: 8.2.py
9/: 9.1.py
day10/: aoc10.1.py
